--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,7 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./kuginukitsunagi/index.html"><img src="../images/kuginukitsunagi.png" alt="kuginukitsunagi image"></a></li>
         <li><a href="./sorobanjima/index.html"><img src="../images/sorobanjima.png" alt="sorobanjima image"></a></li>
         <li><a href="./ishidatami2/index.html"><img src="../images/ishidatami2.png" alt="ishidatami2 image"></a></li>
         <li><a href="./amejima/index.html"><img src="../images/amejima.png" alt="amejima image"></a></li>
