--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -29,7 +29,7 @@
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon.png">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | Pattern | Kindooshi</title>
+    <title>Toshiya Marukubo | Homepage | Pattern</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/style.css">
@@ -48,6 +48,14 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./yosujigoushi/index.html"><img src="../images/yosujigoushi.png" alt="yosujigoushi image"></a></li>
+        <li><a href="./misujigoushi/index.html"><img src="../images/misujigoushi.png" alt="misujigoushi image"></a></li>
+        <li><a href="./futasujigoushi/index.html"><img src="../images/futasujigoushi.png" alt="futasujigoushi image"></a></li>
+        <li><a href="./shoujigoushi/index.html"><img src="../images/shoujigoushi.png" alt="shoujigoushi image"></a></li>
+        <li><a href="./komochigoushi/index.html"><img src="../images/komochigoushi.png" alt="komochigoushi image"></a></li>
+        <li><a href="./kogoushi/index.html"><img src="../images/kogoushi.png" alt="kogoushi image"></a></li>
+        <li><a href="./gobangoushi/index.html"><img src="../images/gobangoushi.png" alt="gobangoushi image"></a></li>
+        <li><a href="./mijingoushi/index.html"><img src="../images/mijingoushi.png" alt="mijingoushi image"></a></li>
         <li><a href="./kuruwatsunagi/index.html"><img src="../images/kuruwatsunagi.png" alt="kuruwatsunagi image"></a></li>
         <li><a href="./kuginukitsunagi/index.html"><img src="../images/kuginukitsunagi.png" alt="kuginukitsunagi image"></a></li>
         <li><a href="./sorobanjima/index.html"><img src="../images/sorobanjima.png" alt="sorobanjima image"></a></li>
