--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,12 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./komochikobenkeigoushi/index.html"><img src="../images/komochikobenkeigoushi.png" alt="komochikobenkeigoushi image"></a></li>
+        <li><a href="./kobenkeigoushi/index.html"><img src="../images/kobenkeigoushi.png" alt="kobenkeigoushi image"></a></li>
+        <li><a href="./benkeigoushi2/index.html"><img src="../images/benkeigoushi2.png" alt="benkeigoushi2 image"></a></li>
+        <li><a href="./benkeigoushi/index.html"><img src="../images/benkeigoushi.png" alt="benkeigoushi image"></a></li>
+        <li><a href="./okinagoushi/index.html"><img src="../images/okinagoushi.png" alt="okinagoushi image"></a></li>
+        <li><a href="./misokoshigoushi/index.html"><img src="../images/misokoshigoushi.png" alt="misokoshigoushi image"></a></li>
         <li><a href="./yosujigoushi/index.html"><img src="../images/yosujigoushi.png" alt="yosujigoushi image"></a></li>
         <li><a href="./misujigoushi/index.html"><img src="../images/misujigoushi.png" alt="misujigoushi image"></a></li>
         <li><a href="./futasujigoushi/index.html"><img src="../images/futasujigoushi.png" alt="futasujigoushi image"></a></li>
