--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,7 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./poop/index.html"><img src="../images/poop.png" alt="poop image"></a></li>
         <li><a href="./komochikobenkeigoushi/index.html"><img src="../images/komochikobenkeigoushi.png" alt="komochikobenkeigoushi image"></a></li>
         <li><a href="./kobenkeigoushi/index.html"><img src="../images/kobenkeigoushi.png" alt="kobenkeigoushi image"></a></li>
         <li><a href="./benkeigoushi2/index.html"><img src="../images/benkeigoushi2.png" alt="benkeigoushi2 image"></a></li>
