--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,7 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./mimasutsunagi/index.html"><img src="../images/mimasutsunagi.png" alt="mimasutsunagi image"></a></li>
         <li><a href="./mimasumon/index.html"><img src="../images/mimasumon.png" alt="mimasumon image"></a></li>
         <li><a href="./poop/index.html"><img src="../images/poop.png" alt="poop image"></a></li>
         <li><a href="./komochikobenkeigoushi/index.html"><img src="../images/komochikobenkeigoushi.png" alt="komochikobenkeigoushi image"></a></li>
