--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,7 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./matsubamaru/index.html"><img src="../images/matsubamaru.png" alt="matsubamaru image"></a></li>
         <li><a href="./kamezoukomon/index.html"><img src="../images/kamezoukomon.png" alt="kamezoukomon image"></a></li>
         <li><a href="./mimasutsunagi/index.html"><img src="../images/mimasutsunagi.png" alt="mimasutsunagi image"></a></li>
         <li><a href="./mimasumon/index.html"><img src="../images/mimasumon.png" alt="mimasumon image"></a></li>
