--- a/pattern/works/index.html
+++ b/pattern/works/index.html
@@ -48,6 +48,7 @@
     <!-- Main -->
     <main>
       <ul>
+        <li><a href="./chikurin/index.html"><img src="../images/chikurin.png" alt="chikurin image"></a></li>
         <li><a href="./kozakura/index.html"><img src="../images/kozakura.png" alt="kozakura image"></a></li>
         <li><a href="./matsubamaru/index.html"><img src="../images/matsubamaru.png" alt="matsubamaru image"></a></li>
         <li><a href="./kamezoukomon/index.html"><img src="../images/kamezoukomon.png" alt="kamezoukomon image"></a></li>
