--- a/scrollColors/index.html
+++ b/scrollColors/index.html
@@ -43,7 +43,7 @@
     <main>
     </main>
     <footer>
-      <small><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></small>
+      <p><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></p>
     </footer>
     <span class="upRight"></span>
     <span class="dwLeft"></span>
