--- a/scrollColors/index.html
+++ b/scrollColors/index.html
@@ -47,6 +47,7 @@
     </footer>
     <span class="upRight"></span>
     <span class="dwLeft"></span>
+    <span id="meter"></span>
     <!-- Script -->
     <script defer src="./scripts/scrollColors.js"></script>
   </body>
