--- a/scrollColors/index.html
+++ b/scrollColors/index.html
@@ -45,6 +45,8 @@
     <footer>
       <p><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></p>
     </footer>
+    <ol id="fav"></ol>
+    <span id="heart"></span>
     <span class="upRight"></span>
     <span class="dwLeft"></span>
     <span id="meter"></span>
