--- a/scrollColors/index.html
+++ b/scrollColors/index.html
@@ -46,7 +46,7 @@
       <p><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></p>
     </footer>
     <ol id="fav"></ol>
-    <span id="heart"></span>
+    <button id="button">FAVORITE ❤️</button>
     <span class="upRight"></span>
     <span class="dwLeft"></span>
     <span id="meter"></span>
