fixed top page.

--- a/index.html
+++ b/index.html
@@ -59,18 +59,19 @@
     <title>Toshiya Marukubo | Homepage</title>
   </head>
   <body>
-    <h1>Choose my challenge.</h1>
+    <h1>Links</h1>
+    <ul>
+      <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
+      <li><a href="https://www.instagram.com/toshiyamarukubo/">Instagram</a></li>
+      <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
+      <li><a href="https://github.com/toshiya-marukubo">GitHub</a></li>
+      <li><a href="http://www.marukubo.net/">Learning Place (for learning Node.js, mongoDB.)</a></li>
+    </ul>
+    <h2>Choose my challenge.</h2>
     <ul>
       <li><a href="./scrollColors/index.html">SCROLL COLORS (prototype)</a></li>
       <li><a href="./pattern/index.html">Pattern (Not updated.)</a></li>
       <li><a href="./100workschallenge/index.html">100 Works Challenge 2020 (Not updated.)</a></li>
-    </ul>
-    <h2>Links</h2>
-    <ul>
-      <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
-      <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
-      <li><a href="https://github.com/toshiya-marukubo">GitHub</a></li>
-      <li><a href="http://www.marukubo.net/">Learning Place (for learning Node.js, mongoDB.)</a></li>
     </ul>
   </body>
 </html>
