--- a/index.html
+++ b/index.html
@@ -94,40 +94,39 @@
     <script>
       (function() {
         'use strict';
-        var canvas = document.getElementById('canvas');
-        if (!canvas || !canvas.getContext) return false;
-        var c = canvas.getContext('2d');
-        var x = canvas.width = window.innerWidth;
-        var y = canvas.height = window.innerHeight;
-        var s = 10;
-        var px = x / 2;
-        var py = y - s;
-        var vx = 3;
-        function dc() {
-          c.fillStyle = 'white';
-          c.beginPath();
-          c.arc(px, py, s, 0, Math.PI * 2, false);
-          c.fill();
-        }
-        function mc() {
-          px += vx;
-          if (px + s > x || px - s < 0) {
-            vx *= -1;
+        window.onload = function() {
+          var canvas = document.getElementById('canvas');
+          if (!canvas || !canvas.getContext) return false;
+          var c = canvas.getContext('2d');
+          var x = canvas.width = window.innerWidth;
+          var y = canvas.height = window.innerHeight;
+          var s = 10;
+          var px = 0 + s;
+          var vx = 0.5;
+          function dc() {
+            c.fillStyle = 'white';
+            c.beginPath();
+            c.arc(px, y - s, s, 0, Math.PI * 2, false);
+            c.fill();
           }
-        }
-        function render() {
-          c.clearRect(0, 0, x, y);
-          dc();
-          mc();
-          window.requestAnimationFrame(render);
-        }
-        render();
-        window.addEventListener('resize', function() {
-          x = canvas.width = window.innerWidth;
-          y = canvas.height = window.innerHeight;
-          px = x / 2;
-          py = y - s;
-        }, false);
+          function mc() {
+            px += vx;
+            if (px + s > x || px - s < 0) {
+              vx *= -1;
+            }
+          }
+          function render() {
+            c.clearRect(0, 0, x, y);
+            dc();
+            mc();
+            window.requestAnimationFrame(render);
+          }
+          render();
+          window.addEventListener('resize', function() {
+            x = canvas.width = window.innerWidth;
+            y = canvas.height = window.innerHeight;
+          }, false);
+        };
       })();
     </script>
   </body>
