--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         padding: 0.8rem;
       }
       canvas {
+        z-index: -1;
         position: absolute;
         top: 0;
         left: 0;
