--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
       }
       body {
         background: black;
-        color: white;
+        color: #FFFAFA;
         position: relative;
       }
       main {
         padding: 2.4rem;
       }
       a {
-        color: white;
+        color: #FFFAFA;
         text-decoration: none;
       }
       a:hover {
         text-decoration: underline;
       }
       a:visited {
-        color: white;
+        color: #FFFAFA;
       }
       h1, h2 {
         font-size: 1.2rem;
@@ -61,6 +61,9 @@
         padding-top: 1rem;
       }
       li {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
         list-style-position: inside;
         padding: 0.8rem;
       }
