--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         margin: 0;
         padding: 0;
       }
+      html, body {
+        height: 100vh;
+      }
       body {
         background: black;
         color: #FFFAFA;
@@ -94,6 +97,7 @@
         <li><a href="./100workschallenge/index.html">100 Works Challenge 2020 (Not updated)</a></li>
       </ul>
     </main>
+    <!--
     <canvas id='canvas'>Canvas not supported.</canvas>
     <script>
       (function() {
@@ -132,6 +136,7 @@
           }, false);
         };
       })();
+      -->
     </script>
   </body>
 </html>
