--- a/index.html
+++ b/index.html
@@ -40,28 +40,29 @@
       }
       body {
         background: black;
-        color: #FFFAFA;
+        color: white;
         position: relative;
       }
       main {
         padding: 2.4rem;
       }
       a {
-        color: #FFFAFA;
+        color: white;
         text-decoration: none;
       }
       a:hover {
         text-decoration: underline;
       }
       a:visited {
-        color: #FFFAFA;
+        color: white;
       }
-      h1, h2 {
-        font-size: 1.2rem;
-        padding-bottom: 1rem;
+      h1 {
+        font-size: 1.6rem;
+        padding: 1rem 0;
       }
       h2 {
-        padding-top: 1rem;
+        font-size: 1.2rem;
+        padding: 1rem 0;
       }
       li {
         overflow: hidden;
@@ -85,7 +86,8 @@
   </head>
   <body>
     <main>
-      <h1>Links</h1>
+      <h1>Hi!</h1>
+      <h2>Links</h2>
       <ul>
         <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
         <li><a href="https://www.instagram.com/toshiyamarukubo/">Instagram</a></li>
