--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         padding: 2.4rem;
       }
       a {
+        display: block;
         color: white;
         text-decoration: none;
       }
@@ -68,7 +69,7 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
-        list-style-position: inside;
+        list-style-type: none;
         padding: 0.8rem;
       }
       canvas {
