--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
       li {
         overflow: hidden;
         white-space: nowrap;
-        text-overflow: ellipsis;
+        -o-text-overflow: ellipsis;
+           text-overflow: ellipsis;
         list-style-type: none;
         padding: 0.8rem;
       }
@@ -79,15 +80,17 @@
         position: fixed;
         top: 0;
         left: 0;
-        filter: blur(10px);
+        -webkit-filter: blur(10px);
+                filter: blur(10px);
       }
       @media screen and (min-width: 48rem) {
         main {
           position: absolute;
           top: 50%;
           left: 50%;
-          transform: translateY(-50%) translateX(-50%);
-          -webkit- transform: translateY(-50%) translateX(-50%);
+          -webkit-transform: translateY(-50%) translateX(-50%);
+              -ms-transform: translateY(-50%) translateX(-50%);
+                  transform: translateY(-50%) translateX(-50%);
         }
       }
     </style>
