--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         padding: 1rem 0;
       }
       li {
+        border-left: solid 2px white;
         overflow: hidden;
         white-space: nowrap;
         -o-text-overflow: ellipsis;
