--- a/index.html
+++ b/index.html
@@ -43,15 +43,12 @@
         font-size: 100%;
         font-weight: lighter;
         font-family: monospace;
-        height: 100%;
+        height: 100vh;
       }
       body {
         background: black;
         color: white;
         position: relative;
-      }
-      main {
-        padding: 0 2.4rem;
       }
       a {
         display: block;
@@ -64,13 +61,17 @@
       a:visited {
         color: white;
       }
+      div#container {
+        max-width: 67.5rem;
+        margin: 0 auto;
+        padding: 2.4rem;
+      }
       h1 {
-        padding-top: 2.4rem;
         font-size: 6rem;
       }
       h2 {
-        font-size: 1.2rem;
-        padding: 1rem 0;
+        font-size: 1.6rem;
+        padding: 1.6rem 0;
       }
       li {
         border-left: solid 2px white;
@@ -86,7 +87,7 @@
       }
       footer {
         text-align: right;
-        padding: 2.4rem;
+        padding: 1.6rem 0;
       }
       canvas {
         width: 100%;
@@ -98,7 +99,21 @@
         -webkit-filter: blur(10px);
                 filter: blur(10px);
       }
-      @media screen and (min-width: 48rem) {
+      @media screen and (min-width: 60rem) {
+        div#container {
+          position: absolute;
+          width: 90%;
+          top: 50%;
+          left: 50%;
+          transform: translateY(-50%) translateX(-50%);
+          -webkit- transform: translateY(-50%) translateX(-50%);
+        }
+        div#left {
+          float: left;
+        }
+        div#right {
+          float: right;
+        }
         br {
           display: block;
         }
@@ -107,16 +122,10 @@
           padding-top: 0;
         }
         main {
-          position: absolute;
-          top: 10%;
-          left: 10%;
         }
         footer {
           font-size: 10rem;
           padding: 0;
-          position: absolute;
-          top: 10%;
-          right: 10%;
         }
       }
     </style>
@@ -124,24 +133,32 @@
     <title>Toshiya Marukubo | Homepage</title>
   </head>
   <body>
-      <main>
-        <h1>Hi!</h1>
-        <h2>Links</h2>
-        <ul>
-          <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
-          <li><a href="https://www.instagram.com/toshiyamarukubo/">Instagram</a></li>
-          <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
-          <li><a href="https://github.com/toshiya-marukubo">GitHub</a></li>
-          <li><a href="http://www.marukubo.net/">Learning Place (Learning Node.js, mongoDB)</a></li>
-        </ul>
-        <h2>Choose my challenge.</h2>
-        <ul>
-          <li><a href="./scrollColors/index.html">SCROLL COLORS (prototype)</a></li>
-          <li><a href="./pattern/index.html">Pattern (Not updated)</a></li>
-          <li><a href="./100workschallenge/index.html">100 Works Challenge 2020 (Not updated)</a></li>
-        </ul>
-      </main>
-      <footer>To!<br>shiya<br>Ma!<br>rukubo</footer>
+    <div id='container'>
+      <div id="left">
+        <header>
+          <h1>Hi!</h1>
+        </header>
+        <main>
+          <h2>Links</h2>
+          <ul>
+            <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
+            <li><a href="https://www.instagram.com/toshiyamarukubo/">Instagram</a></li>
+            <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
+            <li><a href="https://github.com/toshiya-marukubo">GitHub</a></li>
+            <li><a href="http://www.marukubo.net/">Learning Place (Learning Node.js, mongoDB)</a></li>
+          </ul>
+          <h2>Choose my challenge.</h2>
+          <ul>
+            <li><a href="./scrollColors/index.html">SCROLL COLORS (prototype)</a></li>
+            <li><a href="./pattern/index.html">Pattern (Not updated)</a></li>
+            <li><a href="./100workschallenge/index.html">100 Works Challenge 2020 (Not updated)</a></li>
+          </ul>
+        </main>
+      </div>
+      <div id="right">
+        <footer>To!<br>shiya<br>Ma!<br>rukubo</footer>
+      </div>
+    </div>
     <canvas id='canvas'>Canvas not supported.</canvas>
     <script>
       (function() {
@@ -154,6 +171,8 @@
           var y = canvas.height = 64;
           var d = c.createImageData(x, y);
           var h = [];
+          var mx = null;
+          var my = null;
 
           function updateImageData() {
             for (var x = 0; x < canvas.width; x++) {
