--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
           float: right;
         }
         footer {
+          border-right: solid 2px white;
           font-size: 10rem;
-          padding: 0;
+          padding: 0 0.8rem 0 0;
         }
         br {
           display: block;
