--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
     <!-- Meta -->
     <meta charset="utf-8">
-    <meta name="description" content="I'm not a web dev nor designer.">
+    <meta name="description" content="Unemployed.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <!-- Open Graph Protocol -->
@@ -19,10 +19,8 @@
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
     <meta property="og:title" content="Toshiya Marukubo | Homepage">
-    <!--
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/100workschallenge/home/img/og/og-home.png">
-    -->
-    <meta property="og:description" content="I'm not a web dev nor designer.">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/og-image.png">
+    <meta property="og:description" content="Unemployed.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
