--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       html, body {
         font-size: 100%;
         font-weight: lighter;
-        font-family: 'Tahoma', sans-serif;
+        font-family: 'Verdana', sans-serif;
         height: 100vh;
       }
       body {
