--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         color: white;
       }
       p.self{
-        font-size: 3.2rem;
+        font-size: 2.4rem;
       }
       p {
         font-size: 1.0rem;
@@ -115,6 +115,9 @@
         }
         div#container {
           width: 60%;
+        }
+        p.self{
+          font-size: 3.6rem;
         }
         h1 {
           font-size: 10rem;
