--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </main>
       <footer>
         <p>footer</p>
-        <small>&copy To!<br>shiya<br>Ma!<br>rukubo<br>20<br>20</small>
+        <small>&copy To<br>shiya<br>Ma<br>rukubo<br>20<br>20</small>
       </footer>
     </div>
     <canvas id='canvas'>Canvas not supported.</canvas>
