--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       </main>
       <footer>
         <p>footer</p>
-        <small>&copy To<br>shiya<br>Ma<br>rukubo<br>20<br>20</small>
+        <small>&copy<br>To<br>shi<br>ya<br>Ma<br>ru<br>ku<br>bo<br>2020</small>
       </footer>
     </div>
     <canvas id='canvas'>Canvas not supported.</canvas>
