--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
       }
       footer {
         text-align: right;
-        font-size: 4.8rem;
+        font-size: 2.4rem;
       }
       small {
         display: block;
         padding: 0 0.8rem 0 0;
         border-right: solid 2px white;
       }
-      canvas {
+      #canvas {
         width: 100%;
         height: 100%;
         z-index: -1;
@@ -123,7 +123,7 @@
           font-size: 10rem;
         }
         footer {
-          font-size: 10rem;
+          font-size: 3.6rem;
         }
       }
     </style>
@@ -156,7 +156,7 @@
       </main>
       <footer>
         <p>footer</p>
-        <small>&copy<br>To<br>shi<br>ya<br>Ma<br>ru<br>ku<br>bo<br>2020</small>
+        <small>&copy<br>Toshiya<br>Marukubo<br>2020</small>
       </footer>
     </div>
     <canvas id='canvas'>Canvas not supported.</canvas>
@@ -173,6 +173,15 @@
           var y = canvas.height = 64;
           var d = c.createImageData(x, y);
           var h = [];
+
+          function chaseMouse() {
+            c.save();
+            c.fillStyle = 'red';
+            c.beginPath();
+            c.arc(mx, my, 5, 0, Math.PI * 2, false);
+            c.fill();
+            c.restore();
+          }
 
           function updateImageData() {
             for (var x = 0; x < canvas.width; x++) {
